fix: reset the margin to solve to prevent cutoff usernames in the sidebar

--- a/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-item.css
+++ b/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-item.css
@@ -195,7 +195,7 @@
 		flex-direction: row;
 		flex: 1;
 
-		margin: 0 -3px;
+		margin: 0;
 		align-items: center;
 		justify-content: space-between;
 
